CPS112/HW5/debug.txt
1.
Exception in thread "main" java.lang.NullPointerException
	at MazeSolver.solveMaze(MazeSolver.java:31)
	at SolveMaze.main(SolveMaze.java:10)
Solution: check index

2.
Maze.java:107: error: constructor Maze in class Maze cannot be applied to given types;
    {
    ^
  required: String
  found: no arguments
  reason: actual and formal argument lists differ in length

Solution: called super(file) and rewrite parts for start and goal.

3. 
GUI’s maze doesn’t solve the problem.

Solution:
no need to make a new MazeGUI.

4.Wrong solution

Solution: (Prof.Weaver) Simplify the solver not to check char but use isWall method.
